--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,14 @@
 /* your code */
+#table{
+	background:white;
+	border:1px  solid black;
+	border-radius:4px;
+	
+}
+#heading{
+	padding:0px;
+	margin:0px;
+	background:skyblue;
+	border:1px solid black;
+	border-radius:4px;
+}
